--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.url=jdbc:h2:file:./data/db
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=luis
+spring.datasource.password=
+spring.h2.console.enabled=true
 
+
+spring.batch.jdbc.initialize-schema=always
+spring.sql.init.mode=always
