--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.username=luis
 spring.datasource.password=
 spring.h2.console.enabled=true
 
-
 spring.batch.jdbc.initialize-schema=always
 spring.sql.init.mode=always
+
+file.upload-dir=tmp
